--- a/needle-leaf-grand-opening.html
+++ b/needle-leaf-grand-opening.html
@@ -36,7 +36,7 @@ a{text-decoration:none}
         <!-- Brand strip -->
         <tr>
           <td align="center" bgcolor="#2e473b" style="padding:22px 16px">
-            <img src="logo/Needle_Leaf_Logo.png" width="220" alt="Needle &amp; Leaf" class="fluid" style="width:auto;height:auto">
+            <img src="https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Logo/Needle_Leaf_Logo.png" width="220" alt="Needle &amp; Leaf" class="fluid" style="max-width:220px;height:auto">
           </td>
         </tr>
 
@@ -45,12 +45,12 @@ a{text-decoration:none}
         <tr>
           <td>
             <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:600px;height:1180px;">
-              <v:fill type="frame" src="images/hero_bookshelf2.jpg" color="#f6f2eb" />
+              <v:fill type="frame" src="https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Images/hero_bookshelf2.jpg" color="#f6f2eb" />
               <v:textbox inset="0,0,0,0">
         <![endif]-->
         <tr>
-          <td background="images/hero_bookshelf2.jpg"
-              style="background-image:url('images/hero_bookshelf2.jpg');background-size:cover;background-position:center top;background-repeat:no-repeat;">
+          <td background="https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Images/hero_bookshelf2.jpg"
+              style="background-image:url('https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Images/hero_bookshelf2.jpg');background-size:cover;background-position:center top;background-repeat:no-repeat;">
             <!-- inner table controls the vertical placement of overlaid cards -->
             <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
               <!-- Spacer to push content down so it sits where your mock places it -->
@@ -60,20 +60,27 @@ a{text-decoration:none}
               <tr>
                 <td align="center" class="px-40" style="padding:0 40px">
                   <table role="presentation" width="100%" cellpadding="0" cellspacing="0"
-                         style="max-width:560px;background:#f6f2eb;border:5px solid rgba(194 167 93 / 17%);box-shadow:0 6px 16px rgba(0,0,0,.18)">
-                    <tr><td align="center" style="padding:24px 24px 8px 24px">
-                      <div class="serif h1" style="font-size:31px;color:#4b2f3a;font-style:italic;line-height:1.4">
-                        A New Chapter Begins…
-                      </div>
-                    </td></tr>
-                    <tr><td align="center" style="padding:8px 24px 6px 24px">
-                      <img src="decorative/gold_leaf_divider.png" width="220" alt="" style="width:220px;height:auto">
-                    </td></tr>
-                    <tr><td align="center" style="padding:10px 24px 18px 24px">
-                      <div class="sans" style="font-size:18px;color:#2e473b;line-height:1.6">
-                        “Join us for the grand opening of <strong>Needle &amp; Leaf</strong> — a bookstore where every shelf tells a secret.”
-                      </div>
-                    </td></tr>
+                         style="max-width:560px;border:5px solid rgba(194 167 93 / 17%);box-shadow:0 6px 16px rgba(0,0,0,.18)"
+                         bgcolor="#f6f2eb">
+                    <tr>
+                      <td align="center" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:24px 24px 8px 24px;">
+                        <div class="serif h1" style="font-size:31px;color:#4b2f3a;font-style:italic;line-height:1.4">
+                          A New Chapter Begins…
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:8px 24px 6px 24px;">
+                        <img src="https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Decorative/gold_leaf_divider.png" width="220" alt="" style="width:220px;height:auto">
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:10px 24px 18px 24px;">
+                        <div class="sans" style="font-size:18px;color:#2e473b;line-height:1.6">
+                          “Join us for the grand opening of <strong>Needle &amp; Leaf</strong> — a bookstore where every shelf tells a secret.”
+                        </div>
+                      </td>
+                    </tr>
                   </table>
                 </td>
               </tr>
@@ -85,12 +92,15 @@ a{text-decoration:none}
               <tr>
                 <td align="center" class="px-40" style="padding:0 40px">
                   <table role="presentation" width="100%" cellpadding="0" cellspacing="0"
-                         style="max-width:560px;background:#f6f2eb;border:5px solid rgba(194 167 93 / 17%);box-shadow:0 6px 16px rgba(0,0,0,.18)">
-                    <tr><td align="center" style="padding:18px 24px">
-                      <div class="serif" style="font-size:16px;color:#2e473b;line-height:1.6;font-style:italic">
-                        “Explore our collection of rare volumes, teas, and curiosities.”
-                      </div>
-                    </td></tr>
+                         style="max-width:560px;border:5px solid rgba(194 167 93 / 17%);box-shadow:0 6px 16px rgba(0,0,0,.18)"
+                         bgcolor="#f6f2eb">
+                    <tr>
+                      <td align="center" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:18px 24px;">
+                        <div class="serif" style="font-size:16px;color:#2e473b;line-height:1.6;font-style:italic">
+                          “Explore our collection of rare volumes, teas, and curiosities.”
+                        </div>
+                      </td>
+                    </tr>
                   </table>
                 </td>
               </tr>
@@ -119,51 +129,66 @@ a{text-decoration:none}
               <tr>
                 <td align="center" class="px-40" style="padding:0 40px 8px 40px">
                   <table role="presentation" width="100%" cellpadding="0" cellspacing="0"
-                         style="max-width:560px;background:#f6f2eb;border:5px solid rgba(194 167 93 / 17%);box-shadow:0 6px 16px rgba(0,0,0,.18)">
-                    <tr><td align="center" style="padding:22px 24px 6px 24px">
-                      <div class="serif" style="font-size:22px;color:#4b2f3a;font-style:italic;letter-spacing:.4px">
-                        Evening Highlights
-                      </div>
-                    </td></tr>
-                    <tr><td align="center" style="padding:8px 24px 18px 24px">
-                      <img src="decorative/vine_border.png" width="260" alt="" style="opacity:.65">
-                    </td></tr>
+                         style="max-width:560px;border:5px solid rgba(194 167 93 / 17%);box-shadow:0 6px 16px rgba(0,0,0,.18)"
+                         bgcolor="#f6f2eb">
+                    <tr>
+                      <td align="center" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:22px 24px 6px 24px;">
+                        <div class="serif" style="font-size:22px;color:#4b2f3a;font-style:italic;letter-spacing:.4px">
+                          Evening Highlights
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:8px 24px 18px 24px;">
+                        <img src="https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Decorative/vine_border.png" width="260" alt="" style="opacity:.65">
+                      </td>
+                    </tr>
 
                     <!-- Events -->
-                    <tr><td class="px-32" style="padding:6px 32px 0 32px">
-                      <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">The Codex Raffle</div>
-                      <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
-                        An 1800-year-old treatise on insects, unlocked only by chance.
-                      </div>
-                    </td></tr>
+                    <tr>
+                      <td class="px-32" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:6px 32px 0 32px;">
+                        <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">The Codex Raffle</div>
+                        <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
+                          An 1800-year-old treatise on insects, unlocked only by chance.
+                        </div>
+                      </td>
+                    </tr>
 
-                    <tr><td class="px-32" style="padding:14px 32px 0 32px">
-                      <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">Tea &amp; Tales Hour</div>
-                      <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
-                        Savor sage-leaf tea while listening to stories that never found a publisher.
-                      </div>
-                    </td></tr>
+                    <tr>
+                      <td class="px-32" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:14px 32px 0 32px;">
+                        <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">Tea &amp; Tales Hour</div>
+                        <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
+                          Savor sage-leaf tea while listening to stories that never found a publisher.
+                        </div>
+                      </td>
+                    </tr>
 
-                    <tr><td class="px-32" style="padding:14px 32px 0 32px">
-                      <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">The Secret Shelf</div>
-                      <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
-                        One book hums softly. Find it, and it’s yours to keep.
-                      </div>
-                    </td></tr>
+                    <tr>
+                      <td class="px-32" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:14px 32px 0 32px;">
+                        <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">The Secret Shelf</div>
+                        <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
+                          One book hums softly. Find it, and it’s yours to keep.
+                        </div>
+                      </td>
+                    </tr>
 
-                    <tr><td class="px-32" style="padding:14px 32px 0 32px">
-                      <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">Silent Auction</div>
-                      <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
-                        Bid quietly on rare and curious volumes recovered from private collections.
-                      </div>
-                    </td></tr>
+                    <tr>
+                      <td class="px-32" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:14px 32px 0 32px;">
+                        <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">Silent Auction</div>
+                        <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
+                          Bid quietly on rare and curious volumes recovered from private collections.
+                        </div>
+                      </td>
+                    </tr>
 
-                    <tr><td class="px-32" style="padding:14px 32px 24px 32px">
-                      <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">Hand-Bound Keepsake Station</div>
-                      <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
-                        Craft your own miniature journal with wax seal and twine.
-                      </div>
-                    </td></tr>
+                    <tr>
+                      <td class="px-32" bgcolor="#f6f2eb" style="background-color:#f6f2eb;padding:14px 32px 24px 32px;">
+                        <div class="serif" style="font-size:16px;color:#2e473b;font-weight:700;text-align:center">Hand-Bound Keepsake Station</div>
+                        <div class="sans"  style="font-size:15px;color:#2e473b;line-height:1.6;text-align:center">
+                          Craft your own miniature journal with wax seal and twine.
+                        </div>
+                      </td>
+                    </tr>
                   </table>
                 </td>
               </tr>
@@ -181,11 +206,10 @@ a{text-decoration:none}
         <![endif]-->
 
         <!-- Footer ornament + band -->
-        
         <tr>
           <td align="center" style="padding:14px 20px 26px 20px;background:#d9c7a1">
-                   <img src="decorative/vine_border.png" width="260" alt="" style="opacity:.9">
-     <div class="sans" style="font-size:12px;color:#2e473b;line-height:1.6">
+            <img src="https://raw.githubusercontent.com/MiracleRaverMango/needle-leaf-grand-opening/main/Decorative/vine_border.png" width="260" alt="" style="opacity:.9">
+            <div class="sans" style="font-size:12px;color:#2e473b;line-height:1.6">
               Needle &amp; Leaf · 123 Market Street ·
               <a href="mailto:hello@needleandleaf.com" style="color:#2e473b;text-decoration:underline">hello@needleandleaf.com</a>
             </div>
@@ -198,3 +222,6 @@ a{text-decoration:none}
 </table>
 </body>
 </html>
+
+</html>
+
