--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ a{text-decoration:none}
                   <table role="presentation" cellpadding="0" cellspacing="0">
                     <tr>
                       <td bgcolor="#c2a75d" style="border-radius:6px;padding:14px 26px;box-shadow:0 3px 10px rgba(0,0,0,.25)">
-                        <a href="https://example.com/rsvp" target="_blank" class="sans"
+                        <a href="" target="_blank" class="sans"
                            style="font-size:16px;color:#ffffff;font-weight:700;letter-spacing:.2px;display:inline-block">RSVP Now</a>
                       </td>
                     </tr>
@@ -224,4 +224,5 @@ a{text-decoration:none}
 </html>
 
 </html>
+
 
